--- a/.github/workflows/ansible-docker.yml
+++ b/.github/workflows/ansible-docker.yml
@@ -8,13 +8,16 @@ on:
 jobs:
   test-ansible:
     runs-on: ubuntu-latest
-    container: ubuntu:latest  # Run inside a fresh Ubuntu container
+    container:
+      image: ubuntu:latest
+      options: --privileged  # Allow services inside container
 
     steps:
       - name: Install dependencies
         run: |
           apt update
-          apt install -y ansible
+          apt install -y ansible nginx
+          mkdir -p /var/www/html
 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,3 +29,7 @@ jobs:
       - name: Run Ansible Playbook
         run: |
           ansible-playbook -i ansible/inventory.ini ansible/playbook.yml
+
+      - name: Verify Nginx is running
+        run: |
+          curl -I http://localhost || echo "Nginx failed to start"
