--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build and run Ansible in Docker
         run: |
           docker build -t ansible-deploy .
-          docker run --rm -v $(pwd)/ansible:/ansible ansible-deploy
+          docker run --rm -v $(pwd):/workspace ansible-deploy
 
       - name: Push to GitHub Pages
         run: |
