--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -22,5 +22,4 @@ jobs:
 
       - name: Push to GitHub Pages
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git push origin gh-pages --force
+          git push https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages --force
