--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write 
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -22,4 +25,5 @@ jobs:
 
       - name: Push to GitHub Pages
         run: |
-          git push https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages --force
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git push origin gh-pages --force
